--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   left: 50%;
   border-radius: 25px;
   background-color: teal;
+  display: none;
 }
 
 #paddle {
@@ -39,4 +40,13 @@
 .score,
 .lives {
   font-size: xx-large;
+}
+
+.gameOver {
+  position: absolute;
+  text-align: center;
+  color: black;
+  width: 100%;
+  font-size: xx-large;
+  line-height: 400px;
 }
