--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .container {
   height: 600px;
-  width: 80%;
+  width: 800px;
   margin-left: 10%;
   overflow: hidden;
   border: 1px solid black;
+  margin-top: 20px;
   position: relative;
 }
 
@@ -24,10 +25,22 @@
   background-color: white;
   height: 20px;
   width: 200px;
-  left: 50%;
+  left: 35%;
   bottom: 10px;
   background-color: teal;
   border-radius: 10px;
+}
+
+.brick {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80px;
+  height: 50px;
+  padding: 5px;
+  color: white;
+  font-size: 1.9em;
+  text-align: center;
 }
 
 .start {
@@ -48,5 +61,5 @@
   color: black;
   width: 100%;
   font-size: xx-large;
-  line-height: 400px;
+  line-height: 450px;
 }
